--- a/src/main/resources/com/example/orthoj/View/dashboard.fxml
+++ b/src/main/resources/com/example/orthoj/View/dashboard.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.Dashboard">
    <children>
@@ -18,5 +19,10 @@
          </children>
       </VBox>
       <Label layoutX="271.0" layoutY="105.0" text="Dashboard" />
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Assets/comicsman.jpeg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
