--- a/src/main/resources/com/example/orthoj/View/epreuve_testQCM.fxml
+++ b/src/main/resources/com/example/orthoj/View/epreuve_testQCM.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,5 +30,10 @@
             <Button fx:id="ql" mnemonicParsing="false" onAction="#getQLPage" prefHeight="25.0" prefWidth="117.0" text="QL" />
          </children>
       </VBox>
+      <ScrollPane fx:id="scrollpane" layoutX="200.0" layoutY="126.0" prefHeight="200.0" prefWidth="200.0">
+         <content>
+            <VBox fx:id="formArea" prefHeight="222.0" prefWidth="308.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
