--- a/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
+++ b/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.EpreuveTestQCM">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.EpreuveTestQL">
    <children>
       <ImageView fitHeight="17.0" fitWidth="343.0" layoutX="141.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
