--- a/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
+++ b/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -36,5 +37,6 @@
          </content>
       </ScrollPane>
       <Button fx:id="submit" layoutX="407.0" layoutY="341.0" mnemonicParsing="false" onAction="#onSubmit" text="Submit" />
+      <TextField fx:id="testNom" layoutX="238.0" layoutY="65.0" text="test nom" />
    </children>
 </AnchorPane>
