--- a/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
+++ b/src/main/resources/com/example/orthoj/View/epreuve_testQL.fxml
@@ -22,7 +22,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Button fx:id="ajouter" layoutX="482.0" layoutY="341.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
+      <Button fx:id="choisir" layoutX="482.0" layoutY="341.0" mnemonicParsing="false" onAction="#onChoisir" text="Choisir" />
       <Button fx:id="suivant" layoutX="531.0" layoutY="10.0" mnemonicParsing="false" onAction="#suivant" text="Suivant" />
       <VBox layoutX="14.0" layoutY="148.0" prefHeight="114.0" prefWidth="100.0" spacing="40.0">
          <children>
@@ -36,7 +36,7 @@
             <VBox fx:id="formArea" prefHeight="222.0" prefWidth="308.0" />
          </content>
       </ScrollPane>
-      <Button fx:id="submit" layoutX="407.0" layoutY="341.0" mnemonicParsing="false" onAction="#onSubmit" text="Submit" />
+      <Button fx:id="submit" layoutX="405.0" layoutY="341.0" mnemonicParsing="false" onAction="#onSubmit" text="Submit" />
       <TextField fx:id="testNom" layoutX="238.0" layoutY="65.0" text="test nom" />
    </children>
 </AnchorPane>
