--- a/src/main/resources/com/example/orthoj/View/liste_QCM.fxml
+++ b/src/main/resources/com/example/orthoj/View/liste_QCM.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.ListeQCM">
    <children>
       <ScrollPane layoutX="77.0" layoutY="74.0" prefHeight="252.0" prefWidth="447.0">
@@ -14,5 +13,6 @@
          </content>
       </ScrollPane>
       <Button fx:id="annuler" layoutX="524.0" layoutY="342.0" mnemonicParsing="false" onAction="#onAnnuler" text="Annuler" />
+      <Button fx:id="ajouter" layoutX="447.0" layoutY="342.0" mnemonicParsing="false" onAction="#ajouter" text="Ajouter" />
    </children>
 </AnchorPane>
