--- a/src/main/resources/com/example/orthoj/View/CalendrierMain.fxml
+++ b/src/main/resources/com/example/orthoj/View/CalendrierMain.fxml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.CalendrierController">
    <children>
       <MenuButton layoutX="461.0" layoutY="36.0" mnemonicParsing="false" text="New RDV  ">
         <items>
-          <MenuItem id="NewConsultation" mnemonicParsing="false" text="Consultation" />
-          <MenuItem id="NewSuivi" mnemonicParsing="false" text="Suivi" />
-            <MenuItem id="NewAtelier" mnemonicParsing="false" text="Atelier" />
+          <MenuItem id="NewConsultation" mnemonicParsing="false" onAction="#NewConsultation" text="Consultation" />
+          <MenuItem id="NewSuivi" mnemonicParsing="false" onAction="#NewSuivi" text="Suivi" />
+            <MenuItem id="NewAtelier" mnemonicParsing="false" onAction="#NewAtelier" text="Atelier" />
         </items>
       </MenuButton>
+      <TableView fx:id="rendezvous" layoutX="93.0" layoutY="78.0" prefHeight="282.0" prefWidth="457.0">
+        <columns>
+          <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="heure" prefWidth="75.0" text="heure" />
+            <TableColumn fx:id="nom" prefWidth="75.0" text="nom" />
+            <TableColumn fx:id="prenom" prefWidth="75.0" text="prenom" />
+            <TableColumn fx:id="type" prefWidth="75.0" text="type" />
+            <TableColumn fx:id="online" prefWidth="75.0" text="online" />
+        </columns>
+      </TableView>
+      <Button layoutX="495.0" layoutY="364.0" mnemonicParsing="false" onAction="#delete" text="delete" />
+      <Button layoutX="423.0" layoutY="364.0" mnemonicParsing="false" onAction="#start" text="start" />
    </children>
 </AnchorPane>
