--- a/src/main/resources/com/example/orthoj/View/connecter.fxml
+++ b/src/main/resources/com/example/orthoj/View/connecter.fxml
@@ -3,20 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.Connecter">
+<AnchorPane prefHeight="830.0" prefWidth="1440.0" stylesheets="@../Style/button.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.Connecter">
    <children>
-      <VBox layoutX="162.0" layoutY="165.0" prefHeight="64.0" prefWidth="276.0" spacing="20.0">
+      <VBox layoutX="865.0" layoutY="477.0" prefHeight="73.0" prefWidth="274.0" spacing="20.0">
          <children>
-            <TextField fx:id="email" text="email" />
-            <TextField fx:id="password" text="mot de passe" />
+            <TextField fx:id="email" promptText="email" />
+            <TextField fx:id="password" promptText="mot de passe" />
          </children>
       </VBox>
-      <Button layoutX="162.0" layoutY="256.0" mnemonicParsing="false" onAction="#connecter" text="se connecter" />
-      <Label layoutX="275.0" layoutY="131.0" text="Connxion" />
+      <Button layoutX="923.0" layoutY="578.0" mnemonicParsing="false" onAction="#connecter" prefHeight="31.0" prefWidth="160.0" text="se connecter" />
+      <Label layoutX="936.0" layoutY="408.0" prefHeight="37.0" prefWidth="138.0" styleClass="title3" text="Connxion" />
       <Label fx:id="status" layoutX="312.0" layoutY="260.0" />
+      <VBox alignment="CENTER" layoutX="730.0" layoutY="172.0" prefHeight="117.0" prefWidth="562.0" spacing="30.0">
+         <children>
+            <Label prefHeight="98.0" prefWidth="192.0" styleClass="title1" text="Ortho-J">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <Label styleClass="title3" text="Parler avec Confiance, Vivre avec Joie" />
+         </children>
+      </VBox>
+      <ImageView fitHeight="579.0" fitWidth="651.0" layoutX="74.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Assets/Illustration.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
