--- a/src/main/resources/com/example/orthoj/View/dashboard.fxml
+++ b/src/main/resources/com/example/orthoj/View/dashboard.fxml
@@ -15,7 +15,7 @@
       <VBox alignment="CENTER" prefHeight="400.0" prefWidth="162.0" spacing="30.0">
          <children>
             <Label text="Ortho-J" />
-            <Button fx:id="listeBO" mnemonicParsing="false" onAction="#onListeBO" prefHeight="25.0" prefWidth="135.0" text="Patients" />
+            <Button fx:id="listeBO" mnemonicParsing="false" onAction="#onPatients" prefHeight="25.0" prefWidth="135.0" text="Patients" />
             <Button fx:id="calendrier" mnemonicParsing="false" onAction="#onCalendrier" prefHeight="25.0" prefWidth="135.0" text="Calendrier" />
             <Button fx:id="questions" mnemonicParsing="false" onAction="#onQuestions" prefHeight="25.0" prefWidth="135.0" text=" Questionnaires" />
             <Button fx:id="anam" mnemonicParsing="false" onAction="#onAnam" prefHeight="25.0" prefWidth="135.0" text="Anamnèse questions" />
