--- a/src/main/resources/com/example/orthoj/View/page1adulte.fxml
+++ b/src/main/resources/com/example/orthoj/View/page1adulte.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.orthoj.Controller.FirstPageConsultationAdulte"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.orthoj.Controller.FirstPageConsultationAdulte">
+   <children>
+      <DatePicker id="Date" fx:id="date" layoutX="83.0" layoutY="150.0" prefHeight="26.0" prefWidth="150.0" promptText="Date de Naissance" />
+      <Text layoutX="84.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Donne personelle">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Text layoutX="84.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remplissez les champs suivant svp : " />
+      <TextField id="Nom" fx:id="nom" layoutX="84.0" layoutY="108.0" promptText="Nom" />
+      <TextField id="Prenom" fx:id="prenom" layoutX="257.0" layoutY="108.0" promptText="Prenom" />
+      <TextField id="lieu" fx:id="lieu" layoutX="257.0" layoutY="150.0" promptText="lieu de naissance" />
+      <Button id="ajouter" layoutX="440.0" layoutY="346.0" mnemonicParsing="false" text="Suivant" />
+      <TextField id="adresse" fx:id="adresse" layoutX="83.0" layoutY="195.0" promptText="Adresse " />
+      <TextField id="classe" fx:id="diplome" layoutX="83.0" layoutY="237.0" promptText="Diplome " />
+      <TextField id="numpapa" fx:id="numtel" layoutX="257.0" layoutY="195.0" promptText="Num Tel" />
+      <TextField id="numpapa" fx:id="profession" layoutX="257.0" layoutY="237.0"  promptText="Profession" />
+   </children>
 </AnchorPane>
