--- a/src/main/resources/com/example/orthoj/View/page1enfant.fxml
+++ b/src/main/resources/com/example/orthoj/View/page1enfant.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -29,6 +30,7 @@
             <TextField id="classe" fx:id="classe" layoutX="73.0" layoutY="227.0" promptText="Niveau etude" />
             <TextField id="numpapa" fx:id="numtelpapa" layoutX="73.0" layoutY="271.0" promptText="Num tel PAPA" />
             <TextField id="numpapa" fx:id="numtelmama" layoutX="247.0" layoutY="271.0" promptText="Num tel MAMA" />
+            <CheckBox fx:id="creerDossier" layoutX="73.0" layoutY="319.0" mnemonicParsing="false" text="Prise en charge" />
          </children>
       </AnchorPane>
    </children>
