--- a/src/main/resources/com/example/orthoj/View/page1adulte.fxml
+++ b/src/main/resources/com/example/orthoj/View/page1adulte.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,11 +19,10 @@
       <TextField id="Nom" fx:id="nom" layoutX="84.0" layoutY="108.0" promptText="Nom" />
       <TextField id="Prenom" fx:id="prenom" layoutX="257.0" layoutY="108.0" promptText="Prenom" />
       <TextField id="lieu" fx:id="lieu" layoutX="257.0" layoutY="150.0" promptText="lieu de naissance" />
-      <Button id="ajouter" fx:id="suivant" layoutX="440.0" layoutY="346.0" mnemonicParsing="false" onAction="#onSuivant" text="Suivant" />
+      <Button id="ajouter" layoutX="440.0" layoutY="346.0" mnemonicParsing="false" text="Suivant" />
       <TextField id="adresse" fx:id="adresse" layoutX="83.0" layoutY="195.0" promptText="Adresse " />
       <TextField id="classe" fx:id="diplome" layoutX="83.0" layoutY="237.0" promptText="Diplome " />
       <TextField id="numpapa" fx:id="numtel" layoutX="257.0" layoutY="195.0" promptText="Num Tel" />
       <TextField id="numpapa" fx:id="profession" layoutX="257.0" layoutY="237.0" promptText="Profession" />
-      <CheckBox fx:id="creerDossier" layoutX="83.0" layoutY="307.0" mnemonicParsing="false" text="Prise en charge" />
    </children>
 </AnchorPane>
